# ObsidiKey

./: index.html  package.json  reactuse.json  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: main.tsx  routing.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  password_storage_cmd.rs
src-tauri/src/constants/: error_consts.rs  mod.rs  settings_consts.rs
src-tauri/src/dto/: category_dto.rs  mod.rs  password_storage_dto.rs
src-tauri/src/models/: category_model.rs  mod.rs  password_storage_model.rs
src-tauri/src/services/: category_service.rs  mod.rs  password_storage_service.rs
src-tauri/src/states/: db_manager.rs
src-tauri/src/utils/: api_result.rs  check_path.rs  mod.rs
src/assets/fonts/: gt-display.css  gt-text.css
src/components/: Logo.tsx  ThemeToggle.tsx
src/config/: dashboard.ts  elements-size.ts  invoke-commands.ts  main.ts  paths.ts  theme.ts
src/forms/CreatePasswordStorageForm/: index.tsx  useCreatePasswordStorage.ts
src/forms/OpenPasswordStorageForm/: index.tsx  schema.ts  useOpenPasswordStorage.ts
src/forms/SetGlobalPasswordForm/: index.tsx  schema.ts
src/hooks/: index.ts  useInvoke.ts
src/hooks/useDialogs/: DialogsContext.tsx  DialogsProvider.tsx  index.ts  useDialogs.tsx
src/hooks/useHover/: useHover.ts
src/hooks/useNotifications/: NotificationsContext.ts  NotificationsProvider.tsx  index.ts  useNotifications.tsx
src/layouts/: AnimationLayout.tsx  BackButtonLayout.tsx  DashboardLayout.tsx  MainLayout.tsx
src/modules/AppBar/: index.tsx
src/modules/BottomBar/: index.tsx
src/modules/CategoryModal/: index.tsx
src/modules/DashboardDrawer/: index.tsx
src/modules/DashboardList/: index.tsx
src/providers/: SidebarProvider.tsx  ThemeProvider.tsx  ToastProvider.tsx  WindowResizeProvider.tsx  WrapperProvider.tsx
src/screens/: DashboardScreen.tsx  FirstOpenScreen.tsx  HomeScreen.tsx  StorageOperationScreen.tsx
src/services/: settings.service.ts
src/store/: useSidebar.ts
src/styles/: fonts.css
src/types/: passwordStorage.ts
src/ui/: AnimatedMuiTabs.tsx  AnimatedMuiTabs2.tsx  AnimationHeightBox.tsx  DashboardPaper.tsx  FormBox.tsx  ModTextField.tsx  MotionMuiStack.tsx
src/utils/: logger.ts
(+24 files in other folders)
