[package]
name = "obsidikey"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "obsidikey_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
tauri = { version = "2.5.1", features = [] }
tauri-plugin-opener = "2.2.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri-plugin-clipboard-manager = "2.2.2"
tauri-plugin-dialog = "2.2.2"
tauri-plugin-fs = "2.3.0"
tauri-plugin-log = "2.4.0"
tauri-plugin-store = "2.2.0"
tauri-plugin-process = "2"
rusqlite = { version = "0.35.0", features = [
	"bundled-sqlcipher",
	"chrono",
	"blob",
	"serde_json",
	"uuid"
] }
tokio = { version = "1.45.0", features = ["full"] }
chrono = "0.4.41"
base64 = "0.22.1"
rand = "0.9.1"
rust-argon2 = { version = "2.1.0" }
uuid = { version = "1.17.0", features = ["v4"] }
thiserror = "2.0.12"
log = "0.4"
